--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-PORT=5000
 
 # Detener el servidor con Ctrl+C, y escribir el siguiente comando:
 # npm i dotenv -D 
 
-MYSQL_HOST = localhost
-MYSQL_USER = root
-MYSQL_PW =
-MYSQL_BD = actividad
+PORT=5000
+
+MYSQL_HOST =localhost
+MYSQL_USER =root
+MYSWL_PW =
+MYSQL_DB=actividad
